@@ -4,6 +4,7 @@
   universal
 - Changed coordinate format to <x>,<y>,<z> (comma-seperated) for easier
   parsing as a single argument
+- Added ^<sway>,^<heave>,^<surge> look-direction relative coordinates
 
 0.1.0
 -----
